# dev_soil_sph

./: .gitignore  .graphifyignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/mud_atom/: Cargo.toml
crates/mud_atom/src/: insert.rs  lib.rs
crates/mud_constitutive/: Cargo.toml
crates/mud_constitutive/src/: lib.rs  tests.rs
crates/mud_core/: Cargo.toml
crates/mud_core/src/: lib.rs
crates/mud_kernel/: Cargo.toml
crates/mud_kernel/src/: lib.rs
crates/mud_physics/: Cargo.toml
crates/mud_physics/src/: lib.rs
crates/sph_atom/: Cargo.toml
crates/sph_atom/src/: insert.rs  lib.rs
crates/sph_constitutive/: Cargo.toml
crates/sph_constitutive/src/: lib.rs  tests.rs
crates/sph_core/: Cargo.toml
crates/sph_core/src/: lib.rs
crates/sph_kernel/: Cargo.toml
crates/sph_kernel/src/: lib.rs
crates/sph_physics/: Cargo.toml
crates/sph_physics/src/: lib.rs
docs/: architecture.md  dem-campaign-dirt.md  dem-campaign.md  dem-lebc-kt-spec.md  literature-review.md  physics-design.md  sph-primer.md
examples/: VALIDATION.md
examples/column_collapse/: README.md  config.toml  config_a.toml  config_b.toml  config_c.toml  config_negctl.toml  config_sweep_a0p5.toml  config_sweep_a1.toml  config_sweep_a3.toml  config_sweep_a6.toml  main.rs  plot_results.py  sweep.py
examples/column_collapse/plots/: column_collapse_results.csv
examples/conduction_test/: config.toml  main.rs
examples/defluidization/: config.toml  main.rs
examples/footpad/: README.md  config.toml  config_negctl.toml  main.rs  sinkage.csv  sweep.py
examples/footpad/data/: dirt_bekker_reference.csv  validation_summary.csv
examples/footpad/data/zero_g/: sinkage.csv
examples/haff_cooling/: config.toml  main.rs
examples/hydrostatic_column/: README.md  config.toml  main.rs  sweep.py
examples/rest_state/: README.md  config.toml  main.rs  sweep.py
examples/shear_heating/: config.toml  main.rs
examples/simple_shear_mu_i/: README.md  main.rs  sweep.py
src/: lib.rs
validation/: README.md  manifest.toml  run.sh
