[package]
name = "sph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "dev_soil_sph — Meshfree Unstructured Dynamics (granular SPH): examples and binaries"
publish = false

[dependencies]
sph_core = { path = "crates/sph_core" }
# Pure constitutive core — used directly by the `simple_shear_mu_i` element test,
# which drives the return map in isolation (no App / substrate).
sph_constitutive = { path = "crates/sph_constitutive" }
soil_deform = { git = "https://github.com/SueHeir/soil.git", branch = "main" }

[[example]]
name = "rest_state"
path = "examples/rest_state/main.rs"

[[example]]
name = "hydrostatic_column"
path = "examples/hydrostatic_column/main.rs"

[[example]]
name = "haff_cooling"
path = "examples/haff_cooling/main.rs"

[[example]]
name = "shear_heating"
path = "examples/shear_heating/main.rs"

[[example]]
name = "column_collapse"
path = "examples/column_collapse/main.rs"

[[example]]
name = "simple_shear_mu_i"
path = "examples/simple_shear_mu_i/main.rs"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SueHeir/dev_soil_sph"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

# Build against the local grass checkout (mirrors DIRT) — pins the framework to
# the working local tree. Relative sibling path so it is portable across hosts
# (macOS/Linux): assumes grass is checked out beside this repo (e.g. ~/projects/grass).
[[example]]
name = "conduction_test"
path = "examples/conduction_test/main.rs"

[[example]]
name = "defluidization"
path = "examples/defluidization/main.rs"

[[example]]
name = "footpad"
path = "examples/footpad/main.rs"
