[package]
name = "mud_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MUD — umbrella crate: CorePlugins, MudDefaultPlugins, prelude. Depend on this."

[dependencies]
soil_core = { git = "https://github.com/SueHeir/soil.git", branch = "master", default-features = false }
soil_print = { git = "https://github.com/SueHeir/soil.git", branch = "master" }
soil_verlet = { git = "https://github.com/SueHeir/soil.git", branch = "master" }
soil_derive = { git = "https://github.com/SueHeir/soil.git", branch = "master" }
grass_app = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_derive = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
mud_kernel = { path = "../mud_kernel" }
mud_constitutive = { path = "../mud_constitutive" }
mud_atom = { path = "../mud_atom" }
mud_physics = { path = "../mud_physics" }
