[package]
name = "mud_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MUD — umbrella crate: CorePlugins, MudDefaultPlugins, prelude. Depend on this."

[dependencies]
soil_core = { git = "ssh://git@192.168.0.170:2222/SueHeir/soil.git", branch = "main", default-features = false }
soil_print = { git = "ssh://git@192.168.0.170:2222/SueHeir/soil.git", branch = "main" }
soil_verlet = { git = "ssh://git@192.168.0.170:2222/SueHeir/soil.git", branch = "main" }
soil_derive = { git = "ssh://git@192.168.0.170:2222/SueHeir/soil.git", branch = "main" }
grass_app = { git = "ssh://git@192.168.0.170:2222/SueHeir/grass.git", branch = "main" }
grass_scheduler = { git = "ssh://git@192.168.0.170:2222/SueHeir/grass.git", branch = "main" }
grass_derive = { git = "ssh://git@192.168.0.170:2222/SueHeir/grass.git", branch = "main" }
mud_kernel = { path = "../mud_kernel" }
mud_constitutive = { path = "../mud_constitutive" }
mud_atom = { path = "../mud_atom" }
mud_physics = { path = "../mud_physics" }
