[package]
name = "sph_atom"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "dev_soil_sph — per-particle SPH data (SphAtom column) and granular material table, on the SOIL substrate."

[dependencies]
soil_core = { git = "ssh://git@192.168.0.170:2222/SueHeir/soil.git", branch = "main", default-features = false }
soil_derive = { git = "ssh://git@192.168.0.170:2222/SueHeir/soil.git", branch = "main" }
grass_app = { git = "ssh://git@192.168.0.170:2222/SueHeir/grass.git", branch = "main" }
grass_scheduler = { git = "ssh://git@192.168.0.170:2222/SueHeir/grass.git", branch = "main" }
serde = { version = "1", features = ["derive"] }
sph_constitutive = { path = "../sph_constitutive" }
