[package]
name = "sph_atom"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "dev_soil_sph — per-particle SPH data (SphAtom column) and granular material table, on the SOIL substrate."

[dependencies]
soil_core = { git = "https://github.com/SueHeir/soil.git", branch = "main", default-features = false }
soil_derive = { git = "https://github.com/SueHeir/soil.git", branch = "main" }
grass_app = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
serde = { version = "1", features = ["derive"] }
sph_constitutive = { path = "../sph_constitutive" }
