[package]
name = "sph_physics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "dev_soil_sph — the per-step SPH pipeline: density/velocity-gradient pass, constitutive update, momentum pass."

[dependencies]
soil_core = { git = "https://github.com/SueHeir/soil.git", branch = "main", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
sph_kernel = { path = "../sph_kernel" }
sph_constitutive = { path = "../sph_constitutive" }
sph_atom = { path = "../sph_atom" }
serde = { version = "1", features = ["derive"] }
